fix animation on ios

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -550,6 +550,9 @@ li#cart-trigger {
           background-color: #f8f8f8;
           border: 0px;
           box-shadow: none;
+          display:block;
+          height:0px;
+          overflow: hidden;
         }
       }
     }
@@ -616,9 +619,9 @@ li#cart-trigger {
 }
 
 .mobileAnimation{
-  -webkit-transition: height 2s ease-in-out;
-  -moz-transition: height 2s ease-in-out;
-  -ms-transition: height 2s ease-in-out;
-  -o-transition: height 2s ease-in-out;
-  transition: height 2s ease-in-out;
+  -webkit-transition: height 0.5s;
+  -moz-transition: height 0.5s;
+  -ms-transition: height 0.5s;
+  -o-transition: height 0.5s;
+  transition: height 0.5s;
 }
